// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ColorButton renders as a button 1`] = `
<div>
  <button
    class="rounded-full flex items-center justify-center transition-all w-8 h-8 border-1 border-black"
    type="button"
  >
    <div
      class="rounded-full transition-all w-6 h-6 hover:scale-105"
      style="background-color: rgb(250, 204, 21);"
    />
  </button>
</div>
`;

exports[`ColorButton renders correctly by default 1`] = `
<div>
  <div
    class="rounded-full flex items-center justify-center transition-all w-8 h-8 border border-gray hover:border-black"
  >
    <div
      class="rounded-full transition-all w-8 h-8"
      style="background-color: rgb(255, 0, 0);"
    />
  </div>
</div>
`;

exports[`ColorButton renders correctly when disabled 1`] = `
<div>
  <div
    class="rounded-full flex items-center justify-center transition-all w-8 h-8 border border-gray hover:border-black pointer-events-none opacity-50"
  >
    <div
      class="rounded-full transition-all w-8 h-8"
      style="background-color: rgb(0, 0, 255);"
    />
  </div>
</div>
`;

exports[`ColorButton renders correctly when selected 1`] = `
<div>
  <div
    class="rounded-full flex items-center justify-center transition-all w-8 h-8 border-1 border-black"
  >
    <div
      class="rounded-full transition-all w-6 h-6"
      style="background-color: rgb(0, 255, 0);"
    />
  </div>
</div>
`;
